fix: fix overflow

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -65,6 +65,7 @@ h1 {
 }
 
 body{
+  overflow: hidden;
   position: relative;
   margin: 0;
   color: var(--color-text-primary);
